# malbat

./: .gitattributes  .gitignore  EMAIL_CONFIG.md  EMAIL_SETUP_FINAL.md  GIT_SECURITY_GUIDE.md  GIT_SECURITY_QUICKSTART.md  MEDIA_UTILITIES.md  MEDIA_UTILITIES_SUMMARY.md  MEDIA_UTILS_CHEATSHEET.md  README.md  SYNCHRONIZATION_SYSTEM.md  add_forms_translations.py  add_translations.py  check_git_security.sh  clean_merge_po.py  cleanup_sensitive_data.sh  complete_translations.sh  deduplicate_po.py  diagnostic.py  examples_media_utils.py  final_fix_translations.sh  final_solution.sh  fix_po_header.py  fix_translation_values.py  force_recompile.sh  install-malbat.sh  install.sh  manage.py  monitor_import.sh  pyproject.toml  requirements.txt  restart_gunicorn.sh  restart_service.sh  setup_database.sh  test_email.py  ultimate_fix.sh  update_all_translations.py  update_translations.sh
familytree/: admin.py  apps.py  filters.py  forms.py  models.py  signals.py  urls.py  utils.py  views.py
familytree/migrations/: 0001_initial.py  0002_grampsimport.py  0003_media.py  0004_person_media.py  0005_person_is_deceased.py  0006_alter_event_type_alter_person_gender_familychild_and_more.py  0007_proposedmodification.py  0008_person_timestamps.py  0009_rename_familytree__status_f7a1d_idx_familytree__status_b18c56_idx.py  0010_person_gramps_last_updated.py  0011_alter_familychild_order_and_more.py  0012_add_person_indexes_and_update_help_text.py  0013_rename_familytree_gramps__idx_familytree__gramps__6fbaac_idx_and_more.py
malbat/: asgi.py  settings.py  urls.py  wsgi.py
(+25 files in other folders)
